Fixed font size for smaller or scaled screens making content wrap uninententionally

--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -1,5 +1,5 @@
 html {
-  font-size: 13pt;
+  font-size: 12pt;
 }
 
 body {
